<head>内タイトル変更

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover" />
-    <title>ポケモン図鑑</title>
+    <title>読む！ポケモン図鑑</title>
   </head>
   <body>
     <div id="root"></div>
